--- a/webroot/css/common.css
+++ b/webroot/css/common.css
@@ -1,14 +1,14 @@
 @charset "UTF-8";
 body {
   font-size: 12px;
-  font-family: -apple-system,BlinkMacSystemFont,"Hiragino Kaku Gothic ProN",メイリオ,Meiryo,sans-serif;
+  font-family: "メイリオ","Meiryo","Hiragino Sans","ヒラギノ角ゴシック","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","ＭＳ Ｐゴシック","Helvetica Neue",Helvetica,Arial,sans-serif;
   background-color: #F9F7F5;
   color: #13131E;
   margin: 0 auto;
   max-width: 600px; }
 
 p {
-  line-height: 1.5em; }
+  line-height: 1.5; }
 
 .footer {
   padding: 1em 16px;
