--- a/webroot/css/datsumou/common.css
+++ b/webroot/css/datsumou/common.css
@@ -119,15 +119,16 @@
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
+    -webkit-justify-content: flex-start;
        -moz-box-pack: justify;
         -ms-flex-pack: justify;
-            justify-content: space-between;
+            justify-content: flex-start;
     -webkit-box-align: center;
     -webkit-align-items: center;
        -moz-box-align: center;
         -ms-flex-align: center;
             align-items: center; }
+
 
 .datsumou-search-header .datsumou-search-header-inner .datsumou-search-header-input-area {
   position: relative;
