--- a/webroot/css/datsumou.css
+++ b/webroot/css/datsumou.css
@@ -466,7 +466,7 @@ body {
   display: -webkit-box;
   display: flex;
   -webkit-box-pack: justify;
-  justify-content: space-between;
+  justify-content: flex-start;
   -webkit-box-align: center;
   align-items: center;
   width: 100%;
@@ -477,6 +477,10 @@ body {
   padding-right: 10px;
   padding-left: 10px;
   height: 40px;
+}
+
+.datsumou-header-inner .datsumou-header-inner__text{
+  margin-left: 20px;
 }
 
 
