--- a/webroot/css/datsumou/common.css
+++ b/webroot/css/datsumou/common.css
@@ -53,6 +53,10 @@
           justify-content: center;
   padding: 0;
   text-decoration: none; }
+.kuchikomi-button .kuchikomi-button-img {
+  width: 100%;
+  height: auto;
+}
   .kuchikomi-button .kuchikomi-button-text {
      }
   .button-base　.button-base-img{
