--- a/webroot/css/datsumou/common.css
+++ b/webroot/css/datsumou/common.css
@@ -56,6 +56,7 @@
 .kuchikomi-button .kuchikomi-button-img {
   width: 100%;
   height: auto;
+  object-fit: contain;
 }
   .kuchikomi-button .kuchikomi-button-text {
      }
