--- a/webroot/css/sp/shop-detail.css
+++ b/webroot/css/sp/shop-detail.css
@@ -43,6 +43,7 @@ span {
 
 a {
   word-break: break-all;
+  text-decoration: none;
 }
 
 .section {
@@ -917,7 +918,7 @@ a {
   margin-bottom: -10px;
 }
 
-.footer {
+.footer_nav {
   padding: 15px 10px;
   background: transparent;
   border-top: 1px solid #e0dccc;
