--- a/webroot/css/sp/reserve.css
+++ b/webroot/css/sp/reserve.css
@@ -59,7 +59,7 @@ textarea {
 }
 
 .reserve-section .reserve-input {
-    padding: 10px 10px 0px;
+    padding: 10px 10px 0px !important;
 }
 
 .reserve-section .reserve-question,
