--- a/webroot/css/common.css
+++ b/webroot/css/common.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 body {
   font-size: 12px;
-  font-family: "メイリオ","Meiryo","Hiragino Sans","ヒラギノ角ゴシック","ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","ＭＳ Ｐゴシック","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: Helvetica, Arial, Hiragino Sans, "ヒラギノ角ゴシック","Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", sans-serif;
   background-color: #F9F7F5;
   color: #13131E;
   margin: 0 auto;
