--- a/webroot/css/sp/shop-detail.css
+++ b/webroot/css/sp/shop-detail.css
@@ -1,3 +1,5 @@
+@-webkit-keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}@keyframes chartjs-render-animation{from{opacity:0.99}to{opacity:1}}.chartjs-render-monitor{-webkit-animation:chartjs-render-animation 0.001s;animation:chartjs-render-animation 0.001s;}
+
 html {
   color: #595960;
   font-family: Helvetica, Arial, Hiragino Sans, "ヒラギノ角ゴシック",
