--- a/webroot/css/sp/post.css
+++ b/webroot/css/sp/post.css
@@ -1,5 +1,6 @@
 body {
     font-family: Helvetica, Arial, Hiragino Sans, "ヒラギノ角ゴシック", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", sans-serif !important;
+    background: #F9F7F5;
 }
 
 .stars-wrap {
@@ -51,8 +52,9 @@ body {
 }
 
 input[name="Reviews[sex]"]~label {
-    padding: 13px.5em !important;
+    padding: 12px !important;
     border-color: #BCB08A;
+    font-size:12px!important;
 }
 
 label[for="reviews-sex-2"].active {
@@ -78,6 +80,7 @@ select[name="Reviews[question1]"] {
 
 .question-area table td .td-inner-wrap .td-inner .select .fa-chevron-down {
     right: 10px;
+    padding: 12px 16px;
 }
 
 .Search__breadcrumbs {
@@ -127,6 +130,13 @@ textarea {
     border-color: #eeece4 !important;
 }
 
+.question-title {
+    padding: 12px 16px;
+    border-top: 1px solid #E0DCCC;
+    text-align: center;
+    font-size: 12px;
+}
+
 .question-text {
     line-height: 19.6px;
     font-size: 14px !important;
@@ -149,7 +159,11 @@ textarea {
 }
 
 .question-area table td .td-inner.flex>.wrap {
-    margin-right: 6px;
+    flex: 1 0 auto;
+    /* border: #e1e1e1 1px solid; */
+    border-radius: 4px;
+    padding: 6px 12px;
+    /* margin-left: 10px; */
 }
 
 .border {
@@ -194,6 +208,8 @@ td {
     font-family: Helvetica;
     position: relative;
     top: 1.5px;
+    font-size: 12px;
+    font-weight: 500;
 }
 
 .next-question-wrap {
@@ -235,4 +251,23 @@ td {
     text-align: center;
     padding: 20px 0 0px;
     margin-bottom: -4px;
+}
+
+.question-area table th .th-inner {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 36px 16px 12px !important;
+}
+
+.fa, .fas {
+    font-weight: 900;
+    font-size: 12px;
 }
