--- a/webroot/css/sp/reserve.css
+++ b/webroot/css/sp/reserve.css
@@ -41,9 +41,13 @@ textarea {
 }
 
 .reserve-section .reserve-input .reserve-input-radio-wrap .reserve-input-radio input[type="radio"]:checked+.reserve-input-inner>span {
-    padding: 13px.5em !important;
+    padding: 12px !important;
     border-color: #BCB08A;
     border: none !important;
+}
+
+.reserve-input-inner span {
+    padding: 12px !important;
 }
 
 #woman:checked+.reserve-input-inner>span {
@@ -188,4 +192,8 @@ textarea {
 
 #calendar-input-area {
     display: none;
+}
+
+.reserve-confirm-content-policy {
+    font-size:12px !important
 }
