--- a/webroot/css/sp/post.css
+++ b/webroot/css/sp/post.css
@@ -264,7 +264,7 @@ td {
     -moz-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    padding: 36px 16px 12px !important;
+    padding: 44px 10px 10px !important;
 }
 
 .question-area table td .td-inner-wrap .td-inner .select .fa-chevron-down {
@@ -284,4 +284,8 @@ td {
 
 .question-area table td .td-inner.flex>.wrap {
     margin-right: 6px !important;
+}
+
+.question-area table th ,.next-question-wrap {
+    border: 0px !important;
 }
