--- a/webroot/css/sp/shop-detail.css
+++ b/webroot/css/sp/shop-detail.css
@@ -297,7 +297,7 @@ a {
 }
 
 .related-term {
-  border-right: solid 1px #cac4a4;
+  border-right: solid 1px #EEECE4;
 }
 
 .related-term:last-child {
